# chat-app

./: .gitignore  Cargo.toml  Justfile  client-logger.yml
client/: Cargo.toml
client-tui/: Cargo.toml
server/: Cargo.toml
server/src/: client.rs  client_requests.rs  lib.rs  local.rs  local_messages.rs  messages.rs  remote.rs  remote_message.rs  remote_messages.rs  requests.rs  server.rs  server_specs.rs
src/: client.rs  messages.rs  server.rs  utils.rs
