[package]
name = "client-tui"
authors.workspace = true
version = "0.1.0"
edition = "2021"

[dependencies]

# Local
server = { path = "../server/" }

# Logging
log = { workspace = true }
log4rs = "1.3.0"

# Error handling
anyhow = { workspace = true }

# Time
chrono = { workspace = true }

# Serialization
serde = { workspace = true }
ciborium = { workspace = true }

# TUI
clap = { version = "4.5.23", features = ["derive"] }
crossterm = "0.28.1"
