[package]
name = "client"
authors.workspace = true
version = "0.1.0"
edition = "2021"

[dependencies]

# Local
server = { path = "../server/" }

# Logging
log = { workspace = true }
env_logger = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Time
chrono = { workspace = true }

# Serialization
serde = { workspace = true }
ciborium = { workspace = true }

# TUI
crossterm = "0.28.1"
