[package]
name = "client"
authors.workspace = true
version = "0.1.0"
edition = "2021"

[dependencies]

# Local
server = { path = "../server/" }

# Logging
log = { workspace = true }
log4rs = "1.3.0"

# Error handling
anyhow = { workspace = true }

# Time
chrono = { workspace = true }

# Serialization
serde = { workspace = true }
ciborium = { workspace = true }

# TUI
crossterm = "0.28.1"
