[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]

# Logging
log = { workspace = true }
env_logger = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Time
chrono = { workspace = true }

# Serialization
serde = { workspace = true }
ciborium = { workspace = true }

# Security
getrandom = "0.2.15"
